--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "firebase": "^8.0.1",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.20"
   }
 }
