--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "author": "Sen Austin",
   "license": "ISC",
   "dependencies": {
+    "@fontsource/material-icons": "^4.5.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.7",
     "firebase": "^8.0.1",
+    "material-icons": "^1.13.1",
     "method-override": "^3.0.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "serve-favicon": "^2.5.0"
   }
 }
