--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "firebase": "^8.0.1",
+    "jsonwebtoken": "^9.0.0",
     "material-icons": "^1.13.1",
     "method-override": "^3.0.0",
     "nodemon": "^2.0.20",
